changing home screen paragraph and typed.js text

--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -22,10 +22,10 @@
         "greeting": "مرحباً، هذا أنا",
         "myname": "مصطفى صالح",
         "andima": "وأعمل",
-        "spancontent1": "مهندس برمجيات",
+        "spancontent1": "خريج حديث من هندسة الحاسبات والتحكم",
         "spancontent2": "مطور واجهات المواقع",
-        "spancontent3": "مطور ريأكت",
-        "pcontent": "أنا مطور برمجيات متحمس لإنشاء التكنولوجيا لرفع مستوى الأشخاص ومساعدة المطورين الجدد على إيجاد المسار الصحيح. بعض التقنيات التي أستمتع بالعمل معها تشمل جافاسكربت وريأكت.",
+        "spancontent3": "حاليًا أقوم بالتحضير لدور في هندسة السحابة والشبكات",
+        "pcontent": "مطور واجهة المستخدم باستخدام ريأكت. خريج حديث من هندسة الحاسب والتحكم. حاليًا أقوم بالتحضير لدور في هندسة السحابة والشبكات.",
         "facebook": "فيسبوك",
         "instagram": "انستجرام",
         "linkedin": "لينكد ان",
@@ -35,6 +35,7 @@
         "telegram": "تليجرام",
         "phone": "مكالمة هاتفية",
         "duolingo": "دوولينجو",
+        "vk": "VK",
         "downloadcv": "تحميل السيرة الذاتية"
     },
 
