--- a/src/languages/locale/english/home.json
+++ b/src/languages/locale/english/home.json
@@ -26,7 +26,7 @@
         "spancontent1": "Frontend and React Developer",
         "spancontent2": "Computer and Control Engineering Fresh Graduate",
         "spancontent3": "Currently preparing for a Cloud Engineering and Network role",
-        "pcontent": "I'm a software developer who is passionate about creating technology to elevate people and help new developers to find the right path. Some technologies I enjoy working with include Javascript, ReactJS.",
+        "pcontent": "Frontend React Developer. Computer and Control Engineering Fresh Graduate. Currently preparing for a Cloud Engineering and Network role.",
         "facebook": "Facebook",
         "instagram": "Instagram",
         "linkedin": "LinkedIn",
@@ -36,6 +36,7 @@
         "telegram": "Telegram",
         "phone": "Phone",
         "duolingo": "Duolingo",
+        "vk": "VK",
         "downloadcv": "Download CV"
     },
 
