--- a/src/languages/locale/russian/home.json
+++ b/src/languages/locale/russian/home.json
@@ -22,10 +22,10 @@
     "greeting": "Здравствуйте, это я",
     "myname": "Мостафа Салех",
     "andima": "И я являюсь",
-    "spancontent1": "Разработчиком программного обеспечения",
-    "spancontent2": "Разработчиком фронтэнд",
-    "spancontent3": "Разработчик React",
-    "pcontent": "Я разработчик программного обеспечения, который страстно хочет создавать технологии для возвышения людей и помогать новым разработчикам найти верный путь. Некоторые технологии, с которыми мне нравится работать, включают Javascript, ReactJS.",
+    "spancontent1": "Разработчик фронтенда и React",
+    "spancontent2": "Свежий выпускник по компьютерной и управляющей инженерии",
+    "spancontent3": "В настоящее время готовлюсь к роли инженера облачных технологий и сетей",
+    "pcontent": "Разработчик интерфейса React. Свежий выпускник факультета вычислительной техники и систем управления. В настоящее время готовится к работе в облачной инженерии и сети.",
     "facebook": "Facebook",
     "instagram": "Instagram",
     "linkedin": "LinkedIn",
@@ -35,6 +35,7 @@
     "telegram": "Телеграм",
     "phone": "Телефон",
     "duolingo": "Дуолинго",
+    "vk": "ВК",
     "downloadcv": "Скачать резюме"
     },
     
