--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -21,11 +21,11 @@
     "home": {
         "greeting": "مرحباً، هذا أنا",
         "myname": "مصطفى صالح",
-        "andima": "وأعمل",
+        "andima": "وأنا",
         "spancontent1": "خريج حديث من هندسة الحاسبات والتحكم",
-        "spancontent2": "مطور واجهات المواقع",
-        "spancontent3": "حاليًا أقوم بالتحضير لدور في هندسة السحابة والشبكات",
-        "pcontent": "مطور واجهة المستخدم باستخدام ريأكت. خريج حديث من هندسة الحاسب والتحكم. حاليًا أقوم بالتحضير لدور في هندسة السحابة والشبكات.",
+        "spancontent2": "مهتم بهندسة الشبكات والهندسة السحابية",
+        "spancontent3": "أدرس حاليًا CCNP Enterprise",
+        "pcontent": ".خريج حديث متخصص في هندسة الحاسبات والتحكم، ومهتم بهندسة الشبكات والسحابة وجميع التقنيات المرتبطة بها",
         "facebook": "فيسبوك",
         "instagram": "انستجرام",
         "linkedin": "لينكد ان",
@@ -43,7 +43,7 @@
         "about": "معلومات",
         "me": "عني",
         "job": "مطور واجهة المستخدم",
-        "pcontent": "بدأت الأمور عندما كنت طفلاً وخضت تجربتي الأولى مع لعبة كمبيوتر. كان 'كريزي تاكسي' أول لعبة لعبتها من أي وقت مضى. ومع مروري بتجارب الألعاب وتصفح الإنترنت، نمت شغفي أيضًا. لقد أحببت كل شيء يتعلق بالكمبيوترات والعالم الافتراضي الذي تم بناؤه بداخلها. ثم انضممت إلى المعهد العالي للهندسة والتكنولوجيا في كفر الشيخ، حيث كتبت أول برنامج C++ لي، الذي أبهرني. ثم درست هياكل البيانات والخوارزميات، وقواعد البيانات، وبرمجة الكائنات، وأجهزة الكمبيوتر، وهندسة الحاسوب والشبكات. وكل هذا جعلني أشعر بالمزيد من الإعجاب بتعلم تفاصيل أكثر عن الكمبيوترات، بما في ذلك الأجهزة والبرمجيات وجميع التقنيات المرتبطة بها. لكنني اخترت هندسة الكمبيوتر لتكون مهنتي لأنها أكثر تعقيدًا وإثارة لدهشتي. مررت بالعديد من مشاريع البرمجيات والأجهزة خلال فترة دراستي في الجامعة وقررت تعلم تطوير الويب ليكون بوابة مهنتي نحو عالم الكمبيوتر. وها أنا، مطور ويب، ومع مرور الأيام، أتعلم المزيد وأستعد للأدوار المتعلقة بالسحابة والشبكات.",
+        "pcontent": "مرحبًا، اسمي مصطفى، أنا شغوف بالحوسبة السحابية وهندسة الشبكات والبرمجة وأنظمة التشغيل. أنا دائمًا أتعلم المزيد عنها، وأعتقد أنني سأتقنها جميعًا يومًا ما لأنني أصبحت أحب هذا المجال. تخصصاتي هي هندسة الشبكات والهندسة السحابية مع خبرة تزيد عن عام في تطوير الويب.",
         "button": "اقرأ المزيد"
     },
 
