--- a/src/languages/locale/russian/home.json
+++ b/src/languages/locale/russian/home.json
@@ -21,11 +21,11 @@
     "home": {
     "greeting": "Здравствуйте, это я",
     "myname": "Мостафа Салех",
-    "andima": "И я являюсь",
-    "spancontent1": "Разработчик фронтенда и React",
-    "spancontent2": "Свежий выпускник по компьютерной и управляющей инженерии",
-    "spancontent3": "В настоящее время готовлюсь к роли инженера облачных технологий и сетей",
-    "pcontent": "Разработчик интерфейса React. Свежий выпускник факультета вычислительной техники и систем управления. В настоящее время готовится к работе в облачной инженерии и сети.",
+    "andima": "И Я",
+    "spancontent1": "Свежий выпускник факультета вычислительной техники и систем управления",
+    "spancontent2": "Интересуетесь сетевой инженерией и облачной инженерией",
+    "spancontent3": "В настоящее время изучает CCNP Enterprise",
+    "pcontent": "Свежий выпускник факультета вычислительной техники и систем управления, который увлечен сетевым и облачным проектированием и всеми связанными с ними технологиями.",
     "facebook": "Facebook",
     "instagram": "Instagram",
     "linkedin": "LinkedIn",
@@ -43,7 +43,7 @@
         "about": "Обо",
         "me": "мне",
         "job": "Фронтенд-разработчик",
-        "pcontent": "Всё началось, когда я был ребёнком и впервые познакомился с компьютерной игрой. 'Crazy Taxi' была первой игрой, которую я когда-либо играл. И по мере того как я занимался играми и серфингом в интернете, моя страсть также росла. Мне нравилось всё, что связано с компьютерами и виртуальным миром, созданным внутри них. Затем я поступил в Высший институт инженерии и технологии в Кафр-эль-Шейхе, и после этого написал свою первую программу на C++, которая меня очаровала. Затем я изучал структуры данных и алгоритмы, базы данных, объектно-ориентированное программирование, аппаратное обеспечение компьютера, компьютерную архитектуру и сети. И всё это только усилило моё влечение к более подробному изучению компьютеров, включая аппаратное и программное обеспечение и все связанные с этим технологии. Но я выбрал карьеру компьютерного инженера, потому что для меня это более сложно и удивительно. За время университета мне пришлось поработать над множеством программных и аппаратных проектов, и я решил изучить веб-разработку, чтобы начать свою карьеру в мире компьютеров. И вот я, веб-разработчик, и с каждым днем я учусь всему новому и готовлюсь к работе в области облачных технологий и сетей.",
+        "pcontent": "Здравствуйте, меня зовут Мостафа, я увлечен облачной и сетевой инженерией, программированием и операционными системами. Я всегда узнаю о них больше, и я верю, что однажды я овладею ими всеми, потому что я полюбил эту область. Мои специальности - сетевая инженерия и облачная инженерия с опытом работы в веб-разработке более 1 года.",
         "button": "Читать далее"
     },
 
