--- a/src/languages/locale/english/home.json
+++ b/src/languages/locale/english/home.json
@@ -24,7 +24,7 @@
         "myname": "Mostafa Saleh",
         "andima": "And I'm",
         "spancontent1": "A Fresh Graduate of Computer & Control Engineering",
-        "spancontent2": "Interested in Network Engineering & Cloud Engineering",
+        "spancontent2": "Interested in Network Engineering and Cloud Engineering",
         "spancontent3": "Currently studying CCNP Enterprise",
         "pcontent": "A fresh graduate of computer and control engineering department who is passionate about network and cloud engineering and all their related technology.",
         "facebook": "Facebook",
