fix more text in home page

--- a/src/languages/locale/english/home.json
+++ b/src/languages/locale/english/home.json
@@ -23,7 +23,7 @@
         "greeting": "Hello, It's me",
         "myname": "Mostafa Saleh",
         "andima": "And I'm",
-        "spancontent1": "A Fresh Graduate of Computer & Control Engineering",
+        "spancontent1": "A Fresh Graduate of Computer and Control Engineering",
         "spancontent2": "Interested in Network Engineering and Cloud Engineering",
         "spancontent3": "Currently studying CCNP Enterprise",
         "pcontent": "A fresh graduate of computer and control engineering department who is passionate about network and cloud engineering and all their related technology.",
